# M3P1-DEVinventory-

./: .env_example  .flake8  .gitignore  Makefile  README.md  app.py  pyproject.toml
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: index.py  inventory.py  users.py
src/app/db/: __init__.py  data_faker.json
src/app/middlewares/: auth.py
src/app/models/: city.py  country.py  gender.py  inventory.py  permission.py  product_categories.py  role.py  state.py  user.py
src/app/models/schemas/: error_messages.py  inventory_schema.py  role_schema.py  user_schema.py
src/app/routes/: __init__.py
src/app/services/: inventory_service.py  users_service.py
src/app/swagger/: __init__.py
src/app/templates/: index.html
src/app/utils/: __init__.py
tests/: conftest.py  readme.md  test_app.py
tests/inventory/: mocks.py  mocks_inventory.py  test_get_inventory.py  test_patch_inventory.py  test_post_inventory.py
tests/users/: mocks_users.py  test_get_user.py  test_patch_user.py  test_post_user.py
